@@ -5,6 +5,8 @@ import io.notfound.counsel_back.board.dto.PostResponse;
 import io.notfound.counsel_back.board.dto.PostUpdateRequest;
 import io.notfound.counsel_back.board.entity.Attachment;
 import io.notfound.counsel_back.board.entity.Post;
+import io.notfound.counsel_back.board.exception.PostNotFoundException;
+import io.notfound.counsel_back.board.exception.UnauthorizedActionException;
 import io.notfound.counsel_back.board.repository.AttachmentRepository;
 import io.notfound.counsel_back.board.repository.PostRepository;
 import io.notfound.counsel_back.user.entity.User;
@@ -14,7 +16,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -25,14 +26,13 @@ public class BoardService {
 
     private final UserRepository userRepository;
     private final PostRepository postRepository;
-    private final AttachmentRepository attachmentRepository;
     private final S3Service s3Service;
 
     @Transactional
     public PostResponse createPost(PostRequest request, String email) {
 
         User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "사용자를 찾을 수 없습니다: " + email));
+                .orElseThrow(() -> new PostNotFoundException("사용자를 찾을 수 없습니다: " + email));
 
         Post post = Post.builder()
                 .title(request.getTitle())
@@ -50,8 +50,6 @@ public class BoardService {
                         .fileUrl(fileUrl)
                         .post(savedPost)
                         .build();
-
-                attachmentRepository.save(attachment);
                 savedPost.getAttachments().add(attachment);
             }
         }
@@ -60,14 +58,29 @@ public class BoardService {
 
     @Transactional(readOnly = true)
     public PostResponse getPost(Long id) {
-        Post post = postRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("해당 게시글이 존재하지 않습니다."));
+        Post post = postRepository.findByIdWithAuthorAndAttachments(id)
+                .orElseThrow(() -> new PostNotFoundException("해당 게시글이 존재하지 않습니다."));
         return PostResponse.from(post);
     }
 
     @Transactional(readOnly = true)
     public List<PostResponse> getAllPosts() {
-        return postRepository.findAll().stream()
+        return postRepository.findByIdWithAuthorAndAttachments().stream()
+                .map(PostResponse::from)
+                .collect(Collectors.toList());
+    }
+
+
+    // [추가] 검색 기능
+    @Transactional(readOnly = true)
+    public List<PostResponse> searchPosts(String keyword) {
+        if (keyword == null || keyword.trim().isEmpty()) {
+            // 검색어가 없으면 전체 게시글 반환
+            return getAllPosts();
+        }
+        // 제목과 내용에서 검색어가 포함된 게시글을 찾아 DTO로 변환하여 반환
+        List<Post> posts = postRepository.findByTitleOrConetentContainingWithAuthorAndAttachments(keyword);
+        return posts.stream()
                 .map(PostResponse::from)
                 .collect(Collectors.toList());
     }
@@ -75,11 +88,11 @@ public class BoardService {
     @Transactional
     public PostResponse updatePost(Long postId, PostUpdateRequest request, String email) {
         Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new IllegalArgumentException("해당 게시글이 존재하지 않습니다."));
+                .orElseThrow(() -> new PostNotFoundException("해당 게시글이 존재하지 않습니다."));
 
         // 권한 확인
         if (!post.getAuthor().getEmail().equals(email)) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "게시글을 수정할 권한이 없습니다.");
+            throw new UnnauthorizedActionException("게시글을 수정할 권한이 없습니다.");
         }
 
         post.update(request.getTitle(), request.getContent());
@@ -88,7 +101,7 @@ public class BoardService {
         if (request.getDeletedAttachmentUrls() != null) {
             List<Attachment> attachmentsToDelete = post.getAttachments().stream()
                     .filter(att -> request.getDeletedAttachmentUrls().contains(att.getFileUrl()))
-                    .toList();
+                    .collect(Collectors.toList());
 
             for (Attachment attachment : attachmentsToDelete) {
                 s3Service.deleteFile(attachment.getFileUrl()); // S3에서 삭제
@@ -116,11 +129,11 @@ public class BoardService {
     @Transactional
     public void deletePost(Long id, String email) {
         Post post = postRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("해당 게시글이 존재하지 않습니다."));
+                .orElseThrow(() -> new PostNotFoundEception("해당 게시글이 존재하지 않습니다."));
 
         // 권한 확인
         if (!post.getAuthor().getEmail().equals(email)) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "게시글을 삭제할 권한이 없습니다.");
+            throw new UnauthorizedActionException("게시글을 삭제할 권한이 없습니다.");
         }
         // S3 파일 먼저 삭제
         for (Attachment attachment : post.getAttachments()) {
